--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  integrity="sha384-1bme4kwbq78iyhfldvkuhftau6auu8tt94wrhftjdbrcexsu1oboqyl2qvz6jiw3"
+  crossorigin="anonymous"
+/>
+    
+    <title>Sân bóng Bách Khoa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
